RESOLVED FIXED227578
REGRESSION(r278062): [Nicosia] Threaded rendering is broken since r278062
https://bugs.webkit.org/show_bug.cgi?id=227578
Summary REGRESSION(r278062): [Nicosia] Threaded rendering is broken since r278062
Carlos Garcia Campos
Reported 2021-07-01 03:25:30 PDT
We need to bring back things previously done by the base class and chain up to base class save/restore and being/end transparency.
Attachments
Patch (5.61 KB, patch)
2021-07-01 03:27 PDT, Carlos Garcia Campos
no flags
Patch (38.04 KB, patch)
2021-07-01 06:08 PDT, youenn fablet
ews-feeder: commit-queue-
Carlos Garcia Campos
Comment 1 2021-07-01 03:27:47 PDT
Carlos Garcia Campos
Comment 2 2021-07-01 04:20:53 PDT
Radar WebKit Bug Importer
Comment 3 2021-07-01 04:21:17 PDT
youenn fablet
Comment 4 2021-07-01 06:08:11 PDT
Reopening to attach new patch.
youenn fablet
Comment 5 2021-07-01 06:08:15 PDT
Carlos Garcia Campos
Comment 6 2021-07-01 06:26:15 PDT
Youenn, did you re-open the wrong bug? the patch looks unrelated.
youenn fablet
Comment 7 2021-07-01 06:27:36 PDT
Hum, not sure why my patch was uploaded there. Thanks for noticing it!
youenn fablet
Comment 8 2021-07-01 06:32:51 PDT
ChangeLog merge issue...
Tim Horton
Comment 9 2021-07-01 12:42:21 PDT
Whoops, sorry! I was so close :) Is this a special mode or different port? I did build + test webkitgtk (obviously, or the original patch would have been impossible), but didn't catch this.
Michael Catanzaro
Comment 10 2021-07-01 12:49:14 PDT
Yeah, only GTK 4 and WPE use threaded rendering. GTK 3 does not because it's incompatible with the code for rendering scrollbars. With GTK 4 we've just given up on themed scrollbars and have hardcoded a theme that's similar to GTK's default. Distros are going to hate this, but they haven't noticed yet....
Carlos Garcia Campos
Comment 11 2021-07-02 00:25:28 PDT
(In reply to Michael Catanzaro from comment #10) > Yeah, only GTK 4 and WPE use threaded rendering. GTK 3 does not because it's > incompatible with the code for rendering scrollbars. Not even WPE that defaults to 0 threads (so disabled). And the GTK4 bot was broken so didn't catch it either. > With GTK 4 we've just given up on themed scrollbars and have hardcoded a > theme that's similar to GTK's default. Distros are going to hate this, but > they haven't noticed yet....
Note You need to log in before you can comment on or make changes to this bug.