REGRESSION(r278062): [Nicosia] Threaded rendering is broken since r278062 https://bugs.webkit.org/show_bug.cgi?id=227578

Reviewed by Žan Doberšek.

Since r278062 NicosiaCairoOperationRecorder is a GraphicsContext class, so we need to bring back things
previously done by the base class and chain up to base class save/restore and being/end transparency.

* platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.cpp:
(Nicosia::CairoOperationRecorder::fillPath):
(Nicosia::CairoOperationRecorder::strokePath):
(Nicosia::CairoOperationRecorder::drawLine):
(Nicosia::CairoOperationRecorder::drawLinesForText):
(Nicosia::CairoOperationRecorder::drawFocusRing):
(Nicosia::CairoOperationRecorder::save):
(Nicosia::CairoOperationRecorder::restore):
(Nicosia::CairoOperationRecorder::beginTransparencyLayer):
(Nicosia::CairoOperationRecorder::endTransparencyLayer):

Canonical link: https://commits.webkit.org/239318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279462 268f45cc-cd09-0410-ab3c-d52691b4dbfc